--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -6,6 +6,8 @@ export interface Props {
 const { title } = Astro.props;
 
 import '../styles/styles.css';
+import '../styles/flickity.css';
+
 ---
 
 <!DOCTYPE html>
@@ -16,6 +18,9 @@ import '../styles/styles.css';
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<script>
+			import '../scripts/flickity.pkgd.min.js'
+		</script>
 	</head>
 	<body>
 		<article>
