--- a/layouts/MdPanel.astro
+++ b/layouts/MdPanel.astro
@@ -1,18 +1,22 @@
 ---
+import Gallery from '../components/Gallery.astro'
+
 const {frontmatter} = Astro.props;
 const backgroundImage = frontmatter.backgroundImage;
-const background = frontmatter.background;
-const foreground = frontmatter.foreground;
+const backgroundColor = frontmatter.background;
+const foregroundColor = frontmatter.foreground;
+const gallery = frontmatter.gallery;
 ---
 <section>
     {backgroundImage && <img class="userBG" src={backgroundImage} />}
+    {gallery && <Gallery gallery={gallery}/>}
     <slot />
 </section>
 
-<style define:vars={{ background, foreground }}>
+<style define:vars={{ backgroundColor, foregroundColor }}>
     section {
-        color: var(--foreground);
-        background: var(--background);
+        color: var(--foregroundColor);
+        background: var(--backgroundColor);
         padding: 5rem;
     }
 
