--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -7,6 +7,7 @@ const { title } = Astro.props;
 
 import '../styles/styles.css';
 import '../styles/flickity.css';
+import '../styles/flickity-fade.css';
 
 ---
 
@@ -20,6 +21,7 @@ import '../styles/flickity.css';
 		<title>{title}</title>
 		<script>
 			import '../scripts/flickity.pkgd.min.js'
+			import '../scripts/flickity-fade.js'
 		</script>
 	</head>
 	<body>
