--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -8,7 +8,6 @@ const { title } = Astro.props;
 import '../styles/styles.css';
 import '../styles/flickity.css';
 import '../styles/flickity-fade.css';
-
 ---
 
 <!DOCTYPE html>
@@ -23,6 +22,8 @@ import '../styles/flickity-fade.css';
 			import '../scripts/flickity.pkgd.min.js'
 			import '../scripts/flickity-fade.js'
 		</script>
+
+		<link rel="stylesheet" href="/styles/fonts.css" />
 	</head>
 	<body>
 		<article>
