--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,22 +1,66 @@
-html, body {
-    margin: 0;
-    overflow-x: hidden;
-    width: 100%;
+:root {
+    --indent: 10vw;
+    --text-gap: 2rem;
+    --column-gap: 5vw;
+    --text-size-huge: 48px;
+    --text-size-xlarge: 24px;
+    --text-size-large: 18px;
+    --text-size-medium: 16px;
+
+    --text-font-family: "Ronnia W01 Light";
+    --heading-font-family: "Ronnia W01 Bold";
+
+    --color-primary: 93 105 128;
+    --text-color: var(--color-primary);
+    --heading-color: var(--color-primary);
 }
 
-section {
-    position: relative;
-    overflow: hidden;
+* {
+    box-sizing: border-box;
+    margin: 0;
+}
+
+html {
+    height: 100%;
+    max-height: 100%;
+    font-size: 62.5%;
+    overflow-x: hidden;
+    font-family: var(--text-font-family);
+}
+
+p, li {
+    margin: 0;
+    line-height: 1.5;
+    font-size: var(--text-size-medium);
+    color: rgb(var(--text-color));
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    line-height: 1.5;
+    font-family: var(--heading-font-family);
+    color: rgb(var(--heading-color));
 }
 
 h1 {
-    font-size: xx-large;
+    font-size: var(--text-size-huge);
 }
 
 h2 {
-    font-size: x-large;
+    font-size: var(--text-size-xlarge);
 }
 
-h3 {
-    font-size: large;
+hr {
+    height: 1px;
+    background-color: rgb(var(--color-primary) / 0.25);
+    border: none;
 }
+
+main > section {
+    padding: var(--indent);
+}
+
+article > * {
+    margin-bottom: var(--text-gap);
+}
+
