Add Slider component

--- a/components/Slider.astro
+++ b/components/Slider.astro
@@ -1,17 +1,16 @@
 ---
-import { Gallery } from '../types';
+import { Slider } from "../types";
 
 export interface Props {
-	gallery: Gallery;
+	slider: Slider;
 }
 
-const { gallery } = Astro.props;
-const columns = gallery.columns;
+const { slider } = Astro.props;
 ---
 
-<ul class="gallery">
-    {gallery.images.map(img => (
-        <li class="gallery-item">
+<ul class="slider" data-flickity={JSON.stringify(slider.options)}>
+    {slider.images.map(img => (
+        <li class="slider-item">
             <a href={img.link}>
             <figure>
                 <img src={img.image} alt={img.alt}/>
@@ -27,33 +26,36 @@ const columns = gallery.columns;
     ))}
 </ul>
 
-<style define:vars={{ columns }}>
-    .gallery {
-        margin: 0;
+<style>
+    .slider, .flickity-viewport {
+        position: absolute;
+        inset: 0;
         padding: 0;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+        margin: 0;
+    }
+
+    .slider-item {
         width: 100%;
-        list-style-type: none;
+        height: 100%;
     }
-    
-    .gallery .gallery-item {
-        flex: 0 1 calc( 100% / var(--columns));
+
+    a {
+        position:absolute;
+        inset: 0;
     }
-    
-    .gallery .gallery-item img {
+
+    img {
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
-    .gallery-item figure {
+    figure {
         margin: 0;
         position: relative;
     }
 
-    .gallery-item figure figcaption {
+    figure figcaption {
         position: absolute;
         bottom: 0;
     }
