Fixed panel content positioning

--- a/layouts/MdPanel.astro
+++ b/layouts/MdPanel.astro
@@ -24,6 +24,7 @@ const panelLayout  = frontmatter.panelLayout
 
 <style define:vars={{ backgroundColor, foregroundColor, indent }}>
     section {
+        position: relative;
         color: var(--foregroundColor);
         background: var(--backgroundColor);
         padding: var(--indent);
