--- a/components/Slider.astro
+++ b/components/Slider.astro
@@ -6,11 +6,14 @@ export interface Props {
 }
 
 const { slider } = Astro.props;
+
+import '../styles/flickity.css';
+import '../styles/flickity-fade.css';
 ---
 
-<ul class="slider" data-flickity={JSON.stringify(slider.options)}>
+<div class="slider" data-flickity={JSON.stringify(slider.options)}>
     {slider.images.map(img => (
-        <li class="slider-item">
+        <div class="slider-item">
             <a href={img.link}>
             <figure>
                 <img src={img.image} alt={img.alt}/>
@@ -22,9 +25,9 @@ const { slider } = Astro.props;
                 }
             </figure>
             </a>
-        </li>
+        </div>
     ))}
-</ul>
+</div>
 
 <style>
     .slider, .flickity-viewport {
@@ -35,14 +38,15 @@ const { slider } = Astro.props;
     }
 
     .slider-item {
+        position: absolute;
         width: 100%;
         height: 100%;
     }
 
-    a {
+    /* a {
         position:absolute;
         inset: 0;
-    }
+    } */
 
     img {
         width: 100%;
