--- a/layouts/MdPanel.astro
+++ b/layouts/MdPanel.astro
@@ -6,6 +6,7 @@ const { frontmatter } = Astro.props;
 const backgroundImage = frontmatter.backgroundImage;
 const backgroundColor = frontmatter.background;
 const foregroundColor = frontmatter.foreground;
+const panelHeight = frontmatter.panelHeight;
 const indent = frontmatter.indent;
 const gallery = frontmatter.gallery;
 const slider = frontmatter.slider;
@@ -23,13 +24,14 @@ const panelLayout = frontmatter.panelLayout;
   </article>
 </section>
 
-<style define:vars={{ backgroundColor, foregroundColor, indent }}>
+<style define:vars={{ backgroundColor, foregroundColor, indent, panelHeight }}>
   section {
     position: relative;
     color: var(--foregroundColor);
     background: var(--backgroundColor);
     padding: var(--indent);
     gap: var(--column-gap);
+    min-height: var(--panelHeight);
   }
 
   .panelBackground img {
