--- a/components/Slider.astro
+++ b/components/Slider.astro
@@ -3,10 +3,10 @@ import { Slider } from "../types";
 
 export interface Props {
   slider: Slider;
+  background?: string;
 }
 
-const { slider } = Astro.props;
-
+const { slider, background } = Astro.props;
 import "../styles/flickity.css";
 import "../styles/flickity-fade.css";
 ---
@@ -17,7 +17,12 @@ import "../styles/flickity-fade.css";
       <div class="slider-item">
         <a href={img.link}>
           <figure>
-            <img src={img.image} alt={img.alt} />
+            <img
+              src={img.image}
+              alt={img.alt}
+              height={img.height}
+              width={img.width}
+            />
             {(img.title || img.description) && (
               <figcaption>
                 <h3>{img.title}</h3>
@@ -31,38 +36,38 @@ import "../styles/flickity-fade.css";
   }
 </div>
 
-<style>
-  .slider,
-  .flickity-viewport {
+<style is:global>
+  .panelBackground .slider,
+  .panelBackground .flickity-viewport {
     position: absolute;
     inset: 0;
     padding: 0;
     margin: 0;
   }
 
-  .slider-item {
+  .panelBackground .slider-item {
     position: absolute;
     width: 100%;
     height: 100%;
   }
 
   /* a {
-        position:absolute;
-        inset: 0;
-    } */
+          position:absolute;
+          inset: 0;
+      } */
 
-  img {
+  .panelBackground .slider img {
     width: 100%;
     height: 100%;
     object-fit: cover;
   }
 
-  figure {
+  .panelBackground .slider figure {
     margin: 0;
     position: relative;
   }
 
-  figure figcaption {
+  .panelBackground .slider figure figcaption {
     position: absolute;
     bottom: 0;
   }
