Loaded flickity remotely

--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -18,6 +18,20 @@ import "../styles/styles.css";
     <title>{title}</title>
 
     <link rel="stylesheet" href="/styles/fonts.css" />
+
+    <!-- flickity -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/flickity-fade@2/flickity-fade.css"
+    />
+
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
+    ></script>
+    <script src="https://unpkg.com/flickity-fade@2/flickity-fade.js"></script>
   </head>
   <body>
     <article>
