--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -29,9 +29,12 @@ import "../styles/styles.css";
       href="https://unpkg.com/flickity-fade@2/flickity-fade.css"
     />
 
-    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
+    <script
+      is:inline
+      src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
     ></script>
-    <script src="https://unpkg.com/flickity-fade@2/flickity-fade.js"></script>
+    <script is:inline src="https://unpkg.com/flickity-fade@1/flickity-fade.js"
+    ></script>
   </head>
   <body>
     <article>
