Fix slider image scaling

--- a/components/Slider.astro
+++ b/components/Slider.astro
@@ -49,10 +49,14 @@ const { slider, background } = Astro.props;
     height: 100%;
   }
 
-  /* a {
-      position:absolute;
-      inset: 0;
-  } */
+  .panelBackground a {
+    position: absolute;
+    inset: 0;
+  }
+
+  .panelBackground figure {
+    height: 100%;
+  }
 
   .panelBackground .slider img {
     width: 100%;
