--- a/components/Gallery.astro
+++ b/components/Gallery.astro
@@ -1,5 +1,6 @@
 ---
 import { Gallery } from "../types";
+import Image from "./Image.astro";
 
 export interface Props {
   gallery: Gallery;
@@ -15,17 +16,8 @@ const columnGap = gallery.columnGap || "1rem";
   {
     gallery.images.map((img) => (
       <div class="gallery-item">
-        <a href={img.link}>
-          <figure>
-            <img src={img.image} alt={img.alt} />
-            {(img.title || img.description) && (
-              <figcaption>
-                <h3>{img.title}</h3>
-                <p>{img.description}</p>
-              </figcaption>
-            )}
-          </figure>
-        </a>
+        {void (img.imageFit = gallery.imageFit)}
+        <Image image={img} />
       </div>
     ))
   }
@@ -38,20 +30,26 @@ const columnGap = gallery.columnGap || "1rem";
     grid-template-rows: 1fr;
     gap: var(--columnGap);
     padding: var(--columnGap);
+    width: 100%;
+    height: 100%;
   }
-
+  /* 
   img {
     aspect-ratio: 1;
     object-fit: cover;
     width: 100%;
     height: 100%;
-  }
+  } */
 
   .gallery-item {
+    aspect-ratio: 1;
     line-height: 0;
     position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
   }
-
+  /* 
   figcaption {
     padding: 2vw;
     position: absolute;
@@ -60,5 +58,5 @@ const columnGap = gallery.columnGap || "1rem";
     right: 0;
     background-color: rgba(255, 255, 255, 0.5);
     backdrop-filter: blur(3px);
-  }
+  } */
 </style>
