--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -20,7 +20,7 @@ import "../styles/styles.css";
     <link rel="stylesheet" href="/styles/fonts.css" />
 
     <!-- flickity -->
-    <link
+    <!-- <link
       rel="stylesheet"
       href="https://unpkg.com/flickity@2/dist/flickity.min.css"
     />
@@ -34,6 +34,15 @@ import "../styles/styles.css";
       src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
     ></script>
     <script is:inline src="https://unpkg.com/flickity-fade@1/flickity-fade.js"
+    ></script> -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+    <script
+      is:inline
+      src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"
     ></script>
   </head>
   <body>
