--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -19,23 +19,7 @@ import "../styles/styles.css";
 
     <link rel="stylesheet" href="/styles/fonts.css" />
 
-    <!-- flickity -->
-    <!-- <link
-      rel="stylesheet"
-      href="https://unpkg.com/flickity@2/dist/flickity.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/flickity-fade@2/flickity-fade.css"
-    />
-
-    <script
-      is:inline
-      src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"
-    ></script>
-    <script is:inline src="https://unpkg.com/flickity-fade@1/flickity-fade.js"
-    ></script> -->
-
+    <!-- Swiper -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
