--- a/components/Image.astro
+++ b/components/Image.astro
@@ -45,8 +45,8 @@ if (image.width) {
 
   figure {
     display: block;
-    height: 100%;
-    width: 100%;
+    height: fit-content;
+    width: fit-content;
   }
 
   // a,
