--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -5,7 +5,7 @@ export interface Props {
 
 const { title } = Astro.props;
 
-import "../styles/styles.css";
+import "../styles/styles.scss";
 ---
 
 <!DOCTYPE html>
