--- a/pages/index.astro
+++ b/pages/index.astro
@@ -2,13 +2,14 @@
 import Layout from "../layouts/Layout.astro";
 
 const panels = await Astro.glob("./__*.(md|mdx)");
-panels.sort((a, b) => a.frontmatter.weight - b.frontmatter.weight);
+let onlinePanels = panels.filter((a) => !a.frontmatter.draft);
+onlinePanels.sort((a, b) => a.frontmatter.weight - b.frontmatter.weight);
 
 const title = "The Oar House";
 ---
 
 <Layout title={title}>
   <main>
-    {panels.map((panel) => <panel.Content />)}
+    {onlinePanels.map((panel) => <panel.Content />)}
   </main>
 </Layout>
