--- a/components/Image.astro
+++ b/components/Image.astro
@@ -45,13 +45,7 @@ if (image.width) {
 
   figure {
     display: block;
-    height: fit-content;
-    width: fit-content;
+    height: var(--imageHeight);
+    width: var(--imageWidth);
   }
-
-  // a,
-  // img {
-  //   width: 100%;
-  //   height: 100%;
-  // }
 </style>
