--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -160,6 +160,35 @@ article {
   }
 }
 
+article[data-section-name="hero"] section {
+  padding: 8rem;
+  background-color: rgba(white, 0.7);
+  border-radius: 100%;
+  backdrop-filter: blur(4px);
+  aspect-ratio: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+
+  p {
+    flex: 1 1 auto;
+  }
+
+  h2 {
+    flex: 0 1 auto;
+  }
+}
+
+.swiper:not(.swiper-fade)::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  z-index: 1;
+  background: linear-gradient(to right, white 10%, transparent 40%, transparent 60%, white 90%);
+  pointer-events: none;
+}
+
 // form {
 //     label {
 //         display: block;
