--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -81,6 +81,11 @@ hr {
   border: none;
 }
 
+.center {
+  text-align: center;
+}
+
+
 section
   > :is(h1, h2, h3, h4, h5, h6, p, ul, form)
   + :is(h1, h2, h3, h4, h5, h6, p, ul, form) {
