--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -71,8 +71,8 @@ h2 {
 }
 
 h3 {
-    font-size: var(--text-size-large);
-    font-family: var(--default-font-family);
+  font-size: var(--text-size-large);
+  font-family: var(--default-font-family);
 }
 
 hr {
@@ -84,7 +84,6 @@ hr {
 .center {
   text-align: center;
 }
-
 
 section
   > :is(h1, h2, h3, h4, h5, h6, p, ul, form)
@@ -128,7 +127,7 @@ article {
   }
 
   &.one-two-one {
-      grid-template-areas: "column1 column1" "column2 column3" "column4 column4";
+    grid-template-areas: "column1 column1" "column2 column3" "column4 column4";
   }
 
   &.two-one-one {
@@ -165,32 +164,43 @@ article {
   }
 }
 
-article[data-section-name="hero"] section {
-  padding: 8rem;
-  background-color: rgba(white, 0.7);
-  border-radius: 100%;
-  backdrop-filter: blur(4px);
-  aspect-ratio: 1;
+article[data-section-name="hero"] {
+  section {
+    padding: 8rem;
+    background-color: rgba(white, 0.7);
+    border-radius: 100%;
+    backdrop-filter: blur(4px);
+    aspect-ratio: 1;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 
-  p {
-    flex: 1 1 auto;
+    p {
+      flex: 1 1 auto;
+    }
+
+    h2 {
+      flex: 0 1 auto;
+    }
   }
 
-  h2 {
-    flex: 0 1 auto;
+  .panelBackground {
+    filter: sepia(1);
   }
 }
-
 .swiper:not(.swiper-fade)::after {
   content: "";
   position: absolute;
   inset: 0;
   z-index: 1;
-  background: linear-gradient(to right, white 10%, transparent 40%, transparent 60%, white 90%);
+  background: linear-gradient(
+    to right,
+    white 10%,
+    transparent 40%,
+    transparent 60%,
+    white 90%
+  );
   pointer-events: none;
 }
 
@@ -217,7 +227,6 @@ article[data-section-name="hero"] section {
 //     & > :first-child {
 //         margin-top: 0;
 //     }
-
 
 //     [type="text"], [type="email"], textarea {
 //         border: 1px solid rgb(var(--color-primary) / 0.4);
