Updated page title

--- a/layouts/Layout.astro
+++ b/layouts/Layout.astro
@@ -18,7 +18,7 @@ import "../styles/styles.scss";
     <meta name="generator" content={Astro.generator} />
 
     <SEO
-      title="{title}"
+      title={title}
       description="Cafe on the banks of the Swan River in Bayswater"
       canonical="https://www.theoarhouse.au"
     />
