--- a/pages/index.astro
+++ b/pages/index.astro
@@ -5,7 +5,7 @@ const panels = await Astro.glob("./__*.(md|mdx)");
 let onlinePanels = panels.filter((a) => !a.frontmatter.draft);
 onlinePanels.sort((a, b) => a.frontmatter.weight - b.frontmatter.weight);
 
-const title = "The Oar House";
+const title = "The Oar House | Cafe on the Swan River Bayswater";
 ---
 
 <Layout title={title}>
