--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -164,25 +164,21 @@ article {
   }
 }
 
+.dot {
+  padding: 8rem;
+  background-color: rgba(white, 0.7);
+  border-radius: 100%;
+  aspect-ratio: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
 article[data-section-name="hero"] {
   section {
-    padding: 8rem;
-    background-color: rgba(white, 0.7);
-    border-radius: 100%;
     backdrop-filter: blur(4px);
-    aspect-ratio: 1;
-
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-
-    p {
-      flex: 1 1 auto;
-    }
-
-    h2 {
-      flex: 0 1 auto;
-    }
   }
 
   .panelBackground {
