Switch to col and row gap

--- a/layouts/MdPanel.astro
+++ b/layouts/MdPanel.astro
@@ -45,7 +45,7 @@ const uniqueid = frontmatter.url.split("__").pop();
     color: var(--foregroundColor);
     background: var(--backgroundColor);
     padding: var(--indent);
-    column-gap: var(--column-gap);
+    gap: var(--column-gap);
     min-height: var(--panelHeight);
   }
 </style>
