--- a/components/Image.astro
+++ b/components/Image.astro
@@ -22,13 +22,19 @@ const client = new ImgixClient({
   domain: "mws.imgix.net",
   secureURLToken: "yn9ssSaj42RdpwrS",
 });
-
-const url = client.buildURL(
-  "https://main.d1zmfe0n09d1c4.amplifyapp.com" + image.image,
-  { w: image.width, h: image.height }
-);
+var hostname = Astro.url.hostname;
+var url = image.image;
+if (Astro.url.hostname !== "localhost") {
+  url = client.buildURL(
+    "https://main.d1zmfe0n09d1c4.amplifyapp.com" + image.image,
+    { w: image.width, h: image.height }
+  );
+}
 ---
 
+<script define:vars={{ hostname }}>
+  console.log(hostname);
+</script>
 <figure>
   <a href={image.link}>
     <img src={url} alt={image.alt} width={image.width} height={image.height} />
